# dev_tools

./: README.md  common.sh  env.sh  install.sh  vimrc.tpl
clion/license_server/: Makefile.am  Makefile.in  README  archive.sh  autogen.sh  config.h.in  configure  configure.ac
clion/license_server/libev/: Makefile.am  Makefile.in
clion/license_server/release/: release.sh
clion/license_server/release/apple-win/: Dockerfile
clion/license_server/release/linux-32/: Dockerfile
clion/license_server/release/linux-64/: Dockerfile
clion/license_server/release/openwrt-mips/: Dockerfile  Makefile.openwrt  lightjbl.html  lightjbl.init
clion/license_server/src/: Makefile.am  Makefile.in  log.h  main.c  request.c  request.h  signer.c  signer.h  socket.c  socket.h  win32.c  win32.h
docker/: volume_backup_restore.sh
llvm/: install_llvm.sh
python/: install_python.sh
tmux/: config_tmux.sh  install_tmux.sh  tmuxrc.tpl
vim/: config_vim.sh  install.sh  install_plugins.sh  install_vim.sh  install_ycm.sh
zsh/: config_oh_my_zsh.sh  install_zsh.sh  zshrc.tpl
